fixed z-index of the nav, and some styling errors

--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ nav{
   flex-direction: column;
   margin: 0;
   padding: 0;
+  z-index: 9999;
 }
 
 h1 {
@@ -162,7 +163,7 @@ nav li:last-of-type a:hover{
 }
 
 span {
-  border: white 0.1px solid;
+  border-bottom: white 1px solid;
   display: block;
   position: absolute;
   opacity: 1;
@@ -205,7 +206,7 @@ span {
 }
 
 .thin-line {
-  border: var(--DarkGrayishViolet) 1px solid;
+  border-top: var(--DarkGrayishViolet) 1px solid;
   display: block;
   position: absolute;
   opacity: 1;
@@ -217,6 +218,10 @@ span {
 .dif-h1{
   margin-top: 450px;
   margin-bottom: 100px;
+}
+
+.prices{
+  margin: 0 25px ;
 }
 
 .prices, .process, .people{
